5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4472/executions/1582_1330.log
== TEST (2019-03-29 10:48:13) 
-- CODE:
print(round(41,66))
-- OUTPUT:
41
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 10:48:14) 
-- CODE:
print(round(41,66))
-- EXECUTION TIME:
0.108061
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 10:51:33) 
-- CODE:
print(round(x,n)41,666)
-- ERROR:
File "XXXX", line 1
    print(round(x,n)41,666)
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 10:52:26) 
-- CODE:
print(round(41.666))
-- OUTPUT:
42
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 10:52:35) 
-- CODE:
print(round(41.666))
-- EXECUTION TIME:
0.131132
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
42
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 10:52:44) 
-- CODE:
print(round(41,66667))
-- OUTPUT:
41
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 10:52:46) 
-- CODE:
print(round(41,66667))
-- EXECUTION TIME:
0.13724
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 10:52:54) 
-- CODE:
print(round(41, 66667))
-- OUTPUT:
41
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 10:53:06) 
-- CODE:
print(round(41, 66667))
-- EXECUTION TIME:
0.125755
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 10:53:55) 
-- CODE:
print(round(41,66))
-- OUTPUT:
41
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 10:53:58) 
-- CODE:
print(round(41,66))
-- EXECUTION TIME:
0.207833
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 10:54:14) 
-- CODE:
print(round(41.66))
-- OUTPUT:
42
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 10:54:18) 
-- CODE:
print(round(41.66))
-- EXECUTION TIME:
0.210391
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
42
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 10:54:57) 
-- CODE:
round(41,66666)
-- OUTPUT:
42
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 10:55:01) 
-- CODE:
round(41,66666)
-- EXECUTION TIME:
0.124746
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 10:55:12) 
-- CODE:
print(round(41,66666))
-- OUTPUT:
41
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 10:55:14) 
-- CODE:
print(round(41,66666))
-- EXECUTION TIME:
0.120048
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 10:55:27) 
-- CODE:
print(41,66666)
-- OUTPUT:
41 66666
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 10:55:30) 
-- CODE:
print(41,66666)
-- EXECUTION TIME:
0.195647
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41 66666
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 10:55:36) 
-- CODE:
print(41,66)
-- OUTPUT:
41 66
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 10:55:37) 
-- CODE:
print(41,66)
-- EXECUTION TIME:
0.163852
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41 66
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 10:55:55) 
-- CODE:
print(41.66)
-- OUTPUT:
41.66
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 10:55:58) 
-- CODE:
print(41.66)
-- EXECUTION TIME:
0.212624
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.66
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 10:56:04) 
-- CODE:
print("41.66")
-- OUTPUT:
41.66
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 10:56:07) 
-- CODE:
print("41.66")
-- EXECUTION TIME:
0.162617
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.66
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 10:56:52) 
-- CODE:
print(round(41,6666667))
-- OUTPUT:
41
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 10:56:54) 
-- CODE:
print(round(41,6666667))
-- EXECUTION TIME:
0.163454
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 11:00:28) 
-- CODE:
print(round(41,6666667,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(round(41,6666667,2))
TypeError: round() takes at most 2 arguments (3 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 11:00:37) 
-- CODE:
print(round(41,6666667,2))
-- EXECUTION TIME:
0.159488
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/1330/main.py", line 1, in <module>
    print(round(41,6666667,2))
TypeError: round() takes at most 2 arguments (3 given)

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 11:00:48) 
-- CODE:
print(round(41.6666667,2))
-- OUTPUT:
41.67
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 11:00:53) 
-- CODE:
print(round(41.6666667,2))
-- EXECUTION TIME:
0.195369
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.67
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
